--- a/surgas/package.json
+++ b/surgas/package.json
@@ -4,20 +4,23 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "bootstrap": "^5.3.2",
     "i18next": "^23.7.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-intl": "^6.5.5",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
-    "reactstrap": "^9.2.1",
     "redux-toolkit": "^1.1.2",
     "web-vitals": "^2.1.0"
   },
