--- a/surgas/public/manifest.json
+++ b/surgas/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Surgas",
+  "name": "Surgas de Antioquia",
   "icons": [
     {
       "src": "favicon.ico",
