--- a/surgas/package.json
+++ b/surgas/package.json
@@ -14,10 +14,12 @@
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "^5.3.2",
     "i18next": "^23.7.7",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-intl": "^6.5.5",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
